Mon Apr 26 15:12:22 2004  Gilles Detillieux  <grdetil at scrc.umanitoba.ca>

    * htfuzzy/Soundex.cc (generateKey): Applied Alex Kiesel's fix to prevent
      segfaults when word has no letters.

Sun 25 Apr 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * htdig/HTML.cc: Handle empty  noindex_start/noindex_end  lists.
    * htlib/StringList.{cc,h}: const-correctness of Add/Insert/Assign(char*)

    * redo mistakenly backed out patch...

Sun 25 Apr 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * htsearch/parser.cc:  Address (but not fix) bug #934739
    If collection->getDocumentRef() on line 889 returns NULL, don't crash.
    I'm still trying to work out why it does return NULL -- I don't think
    it ever should.

    * mistakenly back out previous patch :(

Sun 25 Apr 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * htdig/Retriever.{h,cc}, htcommon/defaults.cc, htdoc/FAQ.html:
    Add  store_phrases  attribute.  If it is false, htdig only stores the
    first occurrence of each word in a document.  This reduces the database
    size dramatically, and slightly increases digging speed.

Sun 25 Apr 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * db/{aclocal.m4,configure,os_abs.c.win32}, STATUS, htdoc/THANKS.html:
    Correctly dected paths beginning  C:  as absolute paths in cygwin/Win32.
    Fixes bug #814268.

Sun 25 Apr 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * htdig/Retriever.cc:
    Gilles's patch to avoid regex compile for every URL encountered.

Sun 25 Apr 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * contrib/htdig-3.2.0.spec:
    Karl Eichwalder's patch to use mktemp to create safe temp file.

Wed Apr  7 17:12:33 2004  Gilles Detillieux  <grdetil at scrc.umanitoba.ca>

    * htdig/Retriever.cc (IsValidURL): Fixed bug #931377 so bad_extensions
      and valid_extensions not thrown off by periods in query strings.
