@@ -1,1 +1,1 @@
-3.2.0b5
+3.2.0b6
