@@ -17,7 +17,7 @@
 	<hr size="4" noshade>
 	<ul>
 	<li>The current production release of ht://Dig is <strong>3.1.6</strong>.</li>
-	<li>The current beta release of ht://Dig is <strong>3.2.0b5</strong>.</li>
+	<li>The current beta release of ht://Dig is <strong>3.2.0b6</strong>.</li>
 	</ul>
 	</p>
 	<p class="main">
@@ -55,19 +55,19 @@
 	<hr size="4" noshade>
 	<table border=0 cellspacing=5 cellpadding=3 align="center">
 	<tr><th>Site</th>
-	<th>Stable Release (3.1.6)</th><th>Beta Release (3.2.0b5)</th>
+	<th>Stable Release (3.1.6)</th><th>Beta Release (3.2.0b6)</th>
 	<th>Prior Releases</th><th>Contributed Binaries</th></tr>
 
 	<tr><td>htdig.org</td>
 	<td><a href="http://www.htdig.org/files/htdig-3.1.6.tar.gz">(HTTP)</a></td>
-	<td><a href="http://www.htdig.org/files/htdig-3.2.0b5.tar.gz">(HTTP)</a></td>
+	<td><a href="http://www.htdig.org/files/htdig-3.2.0b6.tar.gz">(HTTP)</a></td>
 	<td><a href="http://www.htdig.org/files/">(HTTP)</a></td>
 	<td><a href="http://www.htdig.org/files/binaries/">(HTTP)</a></td>
 	</tr>
 
 	<tr><td>htdig.sourceforge.net</td>
 	<td><a href="http://htdig.sourceforge.net/files/htdig-3.1.6.tar.gz">(HTTP)</a></td>
-	<td><a href="http://htdig.sourceforge.net/files/htdig-3.2.0b5.tar.gz">(HTTP)</a></td>
+	<td><a href="http://htdig.sourceforge.net/files/htdig-3.2.0b6.tar.gz">(HTTP)</a></td>
 	<td><a href="http://htdig.sourceforge.net/files/">(HTTP)</a></td>
 	<td><a href="http://htdig.sourceforge.net/files/binaries/">(HTTP)</a></td>
 	</tr>
@@ -97,8 +97,8 @@
 	<tr><td>www.it.htdig.org</td>
 	<td><a href="http://www.it.htdig.org/files/htdig-3.1.6.tar.gz">(HTTP)</a> 
 	<a href="ftp://www.it.htdig.org/pub/htdig/htdig-3.1.6.tar.gz">(FTP)</a></td>
-	<td><a href="http://www.it.htdig.org/files/htdig-3.2.0b5.tar.gz">(HTTP)</a> 
-	<a href="ftp://www.it.htdig.org/pub/htdig/htdig-3.2.0b5.tar.gz">(FTP)</a></td>
+	<td><a href="http://www.it.htdig.org/files/htdig-3.2.0b6.tar.gz">(HTTP)</a> 
+	<a href="ftp://www.it.htdig.org/pub/htdig/htdig-3.2.0b6.tar.gz">(FTP)</a></td>
 	<td><a href="http://ftp.it.htdig.org/pub/htdig/">(HTTP)</a>
 	<a href="ftp://ftp.it.htdig.org/pub/htdig/">(FTP)</a></td>
 	<td><a href="http://ftp.it.htdig.org/pub/htdig/binaries/">(HTTP)</a>
@@ -108,7 +108,7 @@
 	
 	<tr><td>opdenbrouw.nl</td>
 	<td><a href="http://www.opdenbrouw.nl/htdig/files/htdig-3.1.6.tar.gz">(HTTP)</a></td>
-	<td><a href="http://www.opdenbrouw.nl/htdig/files/htdig-3.2.0b5.tar.gz">(HTTP)</a></td>
+	<td><a href="http://www.opdenbrouw.nl/htdig/files/htdig-3.2.0b6.tar.gz">(HTTP)</a></td>
 	<td><a href="http://www.opdenbrouw.nl/htdig/files/">(HTTP)</a></td>
 	<td><a href="http://www.opdenbrouw.nl/htdig/files/binaries/">(HTTP)</a></td>
 	</tr>
@@ -117,7 +117,7 @@
 	
 	<hr size="4" noshade>
 
-	Last modified: $Date: 2003/11/22 04:15:40 $
+	Last modified: $Date: 2004/05/23 08:45:16 $
 <br> 
 
    <a href="http://sourceforge.net/"> 
