@@ -1,3 +1,9 @@
+Sun 23 May 2004  Lachlan Andrew  <lha at users.sourceforge.net>
+
+    * .version, htdoc/RELEASE.html, htdoc/where.html,
+      htdoc/attrs.html.in, htdoc/cf_byname.html, htdoc/cf_byprog.html:
+      Prepare docs for release of 3.2.0b6.
+
 Mon Apr 26 15:12:22 2004  Gilles Detillieux  <grdetil at scrc.umanitoba.ca>
 
     * htfuzzy/Soundex.cc (generateKey): Applied Alex Kiesel's fix to prevent
@@ -171,7 +177,7 @@ Sun 18 Jan 2004 Lachlan Andrew <lha at users.sourceforge.net>
 Sat 17 Jan 2004 Lachlan Andrew <lha at users.sourceforge.net>
 
     * test/t_{parsing,htdig_local,factors,templates},
-    * test/htdocs/set1/title.html
+    * test/htdocs/set1/title.html:
       Expanded test suite.
 
 Sat 17 Jan 2004 Lachlan Andrew <lha at users.sourceforge.net>
